[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/RecapUIScript.gd" type="Script" id=1]
[ext_resource path="res://ui/styles/stylebox_button_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/styles/stylebox_button.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/themes/theme_title.tres" type="Theme" id=4]
[ext_resource path="res://ui/themes/theme_ui.tres" type="Theme" id=5]
[ext_resource path="res://ui/styles/stylebox_button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://music/end_music.ogg" type="AudioStream" id=7]

[node name="RecapUI" type="CanvasLayer"]
layer = 100

[node name="Control" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.943848
margin_top = -0.943878
margin_right = -0.943848
margin_bottom = -0.943848
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.056
margin_top = 625.0
margin_right = -88.056
margin_bottom = 651.0
grow_horizontal = 2
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 3 )
text = "Undo Last Move"

[node name="FreeplayButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 625.0
margin_right = 60.0
margin_bottom = 651.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 3 )
text = "Freeplay"

[node name="TitleScreenButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 88.0
margin_top = 625.0
margin_right = 216.0
margin_bottom = 651.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 3 )
text = "Title Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 69.0
margin_right = 88.0
margin_bottom = 133.0
grow_horizontal = 2
theme = ExtResource( 4 )
text = "Game Over"
align = 1

[node name="EndGameMusic" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 7 )

[connection signal="pressed" from="Control/UndoButton" to="Control" method="_on_UndoButton_pressed"]
[connection signal="pressed" from="Control/FreeplayButton" to="Control" method="_on_FreeplayButton_pressed"]
[connection signal="pressed" from="Control/TitleScreenButton" to="Control" method="_on_TitleScreenButton_pressed"]
